--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Burst</title>
+    <link rel="icon" type="image/x-icon" href="images/logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -39,7 +40,7 @@
 
     <header class="md:container md:mx-auto">
       <nav>
-        <div class="bg-[#f85559] text-white flex justify-between rounded-full mx-[100px]">
+        <div class="bg-[#f85559] text-white flex justify-between rounded-full">
           <div class="">
             <ul class="flex justify-start gap-6 pt-4 ml-10 font-medium">
               <li><a class="">Home</a></li>
@@ -67,7 +68,7 @@
           <!-- second part start -->
           <div class="carousel py-10 ">
             <div id="slide1" class="carousel-item relative w-full">
-              <img src="images/banner1.png" class="w-full" />
+              <img src="images/banner1.png" class="w-full from-orange-950" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide4" class="btn btn-circle">❮</a> 
               <div class="text-center">
@@ -79,7 +80,7 @@
               </div>
             </div> 
             <div id="slide2" class="carousel-item relative w-full">
-              <img src="images/banner2.png" class="w-full" />
+              <img src="images/banner2.png" class="w-full from-orange-300" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide1" class="btn btn-circle">❮</a> 
                 <div class="text-center">
@@ -91,7 +92,7 @@
               </div>
             </div> 
             <div id="slide3" class="carousel-item relative w-full">
-              <img src="images/banner3.png" class="w-full" />
+              <img src="images/banner3.png" class="w-full from-orange-950" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide2" class="btn btn-circle">❮</a> 
                 <div class="text-center">
@@ -103,7 +104,7 @@
               </div>
             </div> 
             <div id="slide4" class="carousel-item relative w-full">
-              <img src="images/banner4.png" class="w-full" />
+              <img src="images/banner4.png" class="w-full from-orange-950" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide3" class="btn btn-circle">❮</a> 
                 <div class="text-center">
@@ -194,7 +195,7 @@
 
       <section class="md:container md:mx-auto m-10">
         <div class="carousel-item relative opacity-90">
-          <img src="images/team.png" class="bg-opacity-75">
+          <img src="images/team.png" class="from-orange-950">
           <div class="absolute transform -translate-y-1/2 left-5 right-5 top-1/2 m-5">
             <P class="font-bold text-white text-5xl text-center m-10">Meet the team section</P>
             <h4 class="font-bold text-white text-center">Contrary to popular belief, is not simply random text.<br> It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</h4>
